# rs_addons

./: .gitignore  CMakeLists.txt  package.xml  rs_learning_Readme.md  setup.py
data/: unrealGroundTruth.yaml
descriptors/analysis_engines/: ClassifyOffline.xml  ClassifyOffline.yaml  faster_rcnn_demo.xml  faster_rcnn_demo.yaml  fcis_demo.xml  fcis_demo.yaml  mask_rcnn_demo.xml  mask_rcnn_demo.yaml  my_demo.xml  ssd_demo.xml  ssd_demo.yaml  test_addons.xml  unreal.xml  unreal.yaml  unreal2.xml
descriptors/annotators/: ARMarkersDetector.yaml  BeliefToKnowRob.yaml  CaffeClassificationAnnotator.yaml  ClassifyOfflineAnnotator.xml  ClassifyOfflineAnnotator.yaml  ClusterToPartsSegmenter.yaml  DeCafClassifier.xml  DeCafClassifier.yaml  FCISInstanceSegmentationAnnotator.xml  FCISInstanceSegmentationAnnotator.yaml  FasterRCNNDetectionAnnotator.xml  FasterRCNNDetectionAnnotator.yaml  GbAnnotator.yaml  GetRenderedViews.yaml  HandleAnnotator.xml  HandleAnnotator.yaml  KnnAnnotator.xml  KnnAnnotator.yaml  MaskRCNNInstanceSegmentationAnnotator.xml  MaskRCNNInstanceSegmentationAnnotator.yaml  OffScreenSceneVariation.yaml  RfAnnotator.xml  RfAnnotator.yaml  SSDDetectionAnnotator.xml  SSDDetectionAnnotator.yaml  SimatrackDetection.yaml  SimtrackDetection.yaml  SvmAnnotator.xml  SvmAnnotator.yaml  TemplateAlignmentAnnotator.yaml  UnrealGTAnnotator.xml  UnrealGTAnnotator.yaml  UnrealTableScene.yaml
descriptors/typesystem/: all_types.xml
include/rs_addons/: RSClassifier.h  RSGBT.h  RSKNN.h  RSRF.h  RSSVM.h
include/rs_addons/classifiers/: RSClassifier.h  RSGBT.h  RSKNN.h  RSRF.h  RSSVM.h
include/rs_addons/types/: all_types.h  type_definitions.h
include/rs_queryanswering/annotators/: HandleExtractor.h
python/rs_addons/: __init__.py  faster_rcnn.py  fcis.py  mask_rcnn.py  ssd.py
scripts/: install_trained_data.py
src/: ARMarkersDetector.cpp  CaffeClassificationAnnotator.cpp  ClassifyOfflineAnnotator.cpp  DeCafClassifier.cpp  FCISInstanceSegmentationAnnotator.cpp  FasterRCNNDetectionAnnotator.cpp  GbAnnotator.cpp  KnnAnnotator.cpp  MaskRCNNInstanceSegmentationAnnotator.cpp  RSClassifier.cpp  RSGBT.cpp  RSKNN.cpp  RSRF.cpp  RSSVM.cpp  RfAnnotator.cpp  SSDDetectionAnnotator.cpp  SimtrackDetection.cpp  SvmAnnotator.cpp  TrainerAnnotator.cpp  UnrealGTAnnotator.cpp
src/annotators/: BeliefToKnowRob.cpp  CMakeLists.txt  ClusterToPartsSegmenter.cpp  GetRenderedViews.cpp  HandleAnnotator.cpp  OffScreenSceneVariation.cpp  TemplateAlignmentAnnotator.cpp  UnrealTableScene.cpp
src/classifiers/: RSClassifier.cpp  RSGBT.cpp  RSKNN.cpp  RSRF.cpp  RSSVM.cpp
src/ext/: FeatureExtractor.cpp
src/tools/: classifier_trainer.cpp  feature_extractor.cpp
src/utils/: ExtractFeatsFromCNNLayer.cpp
